HTML-339.  fixed SimpleDateFormat unparseable date error in PatientDetailSubmissionElement.  While I was in there, I added support for decimal ages.